--- a/ay24-25/style.css
+++ b/ay24-25/style.css
@@ -149,3 +149,13 @@ textarea {
     padding: 15px;
     height: 300px;
 }
+
+.status {
+    font-size: 0.9rem;
+    margin: 5px;
+    color: rgb(18, 183, 18);
+}
+
+.status:not(.active) {
+    display: none;
+}
